# skim

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  crates.yml  publish-github.yml
shell/: key-bindings.zsh
src/: ansi.rs  header.rs  input.rs  item.rs  lib.rs  model.rs  options.rs  previewer.rs  query.rs  reader.rs  selection.rs  spinlock.rs  theme.rs  util.rs
src/engine/: fuzzy.rs
