[package]
name = "skim"
version = "0.10.4"
authors = ["Zhang Jinzhou <lotabout@gmail.com>"]
description = "Fuzzy Finder in rust!"
documentation = "https://docs.rs/skim"
homepage = "https://github.com/lotabout/skim"
repository = "https://github.com/lotabout/skim"
readme  = "README.md"
keywords = ["fuzzy", "menu", "util"]
license = "MIT"
edition = "2018"

[lib]
name = "skim"
path = "src/lib.rs"

[[bin]]
name = "sk"
path = "src/bin/main.rs"

[dependencies]
nix = "0.24.3"
atty = { version = "0.2.14", optional = true }
regex = { version = "0.1.0", package = "regex-lite" }
lazy_static = "1.4.0"
shlex = { version = "1.1.0", optional = true }
unicode-width = "0.1.9"
log = "0.4.17"
env_logger = { version = "0.9.0", optional = true }
time = "0.3.13"
clap = { version = "3.2.22", optional = true, features = ["cargo"] }
tuikit = "0.4.6"
vte = "0.11.0"
fuzzy-matcher = { git = "https://github.com/tomkwok/fuzzy-matcher" }
rayon = "1.5.3"
derive_builder = "0.12.0"
bitflags = "1.3.2"
# timer = "0.2.0"
timer = { git = "https://github.com/Yoric/timer.rs", rev = "4ba32a90432c50224d5a2c447cb213e8432b10a8" }
chrono = { version = "0.4.22", default-features = false }
crossbeam = "0.8.2"
beef = "0.5.2" # compact cow
defer-drop = "1.2.0"
once_cell = { version = "1.16.0", default-features = false }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:atty", "dep:shlex", "dep:env_logger"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
